{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 19,
  "lineage": "12505f1a-5b2b-2290-296a-40621caced32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:168130825968:instance/i-00c2e539e3ec2b578",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c2e539e3ec2b578",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06aa57c207ffb6f72",
            "private_dns": "ip-172-31-56-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.56.31",
            "public_dns": "ec2-35-174-185-215.compute-1.amazonaws.com",
            "public_ip": "35.174.185.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01195311d66ed941e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb2d772f21649600",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d9ec026b81fcc18"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168130825968:loadbalancer/app/my-lb/23d4de9bb1fbd8eb",
            "arn_suffix": "app/my-lb/23d4de9bb1fbd8eb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-lb-646544430.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:168130825968:loadbalancer/app/my-lb/23d4de9bb1fbd8eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b7aec59c93b5931a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05768d6344c0037e2"
              },
              {
                "subnet_id": "subnet-0bb2d772f21649600"
              }
            ],
            "subnets": [
              "subnet-05768d6344c0037e2",
              "subnet-0bb2d772f21649600"
            ],
            "tags": {
              "Name": "my-lb"
            },
            "tags_all": {
              "Name": "my-lb"
            },
            "vpc_id": "vpc-06866289fbea1ce69",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_lb_target_group.tg",
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168130825968:listener/app/my-lb/23d4de9bb1fbd8eb/24b6a6fe0eda0297",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:168130825968:targetgroup/tg20230221205921438500000001/42d6a5d42d8bb820",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168130825968:listener/app/my-lb/23d4de9bb1fbd8eb/24b6a6fe0eda0297",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:168130825968:loadbalancer/app/my-lb/23d4de9bb1fbd8eb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.tg",
            "aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:168130825968:targetgroup/tg20230221205921438500000001/42d6a5d42d8bb820",
            "arn_suffix": "targetgroup/tg20230221205921438500000001/42d6a5d42d8bb820",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:168130825968:targetgroup/tg20230221205921438500000001/42d6a5d42d8bb820",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg20230221205921438500000001",
            "name_prefix": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06866289fbea1ce69"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168130825968:security-group/sg-0b7aec59c93b5931a",
            "description": "Example Security Group",
            "egress": [],
            "id": "sg-0b7aec59c93b5931a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example_security_group20230221220130418300000001",
            "name_prefix": "example_security_group",
            "owner_id": "168130825968",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example_security_group"
            },
            "tags_all": {
              "Name": "example_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06866289fbea1ce69"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}